# otel-collector-test

./: Cargo.toml  Dockerfile  fly.toml
otel/: Dockerfile  fly.toml  otel_config.yml
src/: main.rs
