[package]
name = "otel_collector_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autometrics = { version = "0.6.0", features = ["opentelemetry"] }
axum = "0.6.20"
opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tonic", "metrics"] }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "full"] }
